@@ -3,6 +3,6 @@ DIST clementine-0.4.2.tar.gz 4670893 RMD160 e6da4be1f4d6d1f193abe0f2b7afa1270e7f
 DIST clementine-0.5.3.tar.gz 5236224 RMD160 77765d09ea1c1639a45b0cd7bef86592642255df SHA1 20657161c1098ab430bd1451f67fb80d767656de SHA256 0704911c4a2ad38bd2154120db24e95c52bec3d456766e0f29e1f60b0a39641d
 EBUILD clementine-0.4.2.ebuild 2189 RMD160 295eb69564bea2fd4f3d32ce4be813a80af04283 SHA1 4c0f60ca1293c987169e54ff4517b638b8f0c69c SHA256 8bb79743e40303042f50855ad8878bf931b7041ca8387c15100b1062db0328dc
 EBUILD clementine-0.5.3.ebuild 2655 RMD160 68f7791e271400358cf7d24035c6db79dbccc09d SHA1 4afc31151f582d1681d1e579b4283946483a7874 SHA256 877acb0bb55ec271ea521aa65d3b7c9bf6d90d0e139dccc4fa6f584eae637086
-EBUILD clementine-9999.ebuild 2559 RMD160 d69cbe271fddfaa67c9e78a48c2e9a9324809ec2 SHA1 8916d81a3460c9bb6c5012ac877a9e1cedb8fec0 SHA256 095d6b78550140fdaea35bf67dce9df8251a5d43838348715efa94082fa3904d
-MISC ChangeLog 1576 RMD160 bdd89d98341720ff2f2d2f21452fc04fafc8edfb SHA1 13d9381c8026e2e9bee2ec587552c2594bcd77a2 SHA256 19b409210df33c6130d684043308662548d362b06a6d0ae6d9cb8d52d055af9d
+EBUILD clementine-9999.ebuild 3217 RMD160 a3b469c9d670e5c46fe31c93f16a598e167d53e9 SHA1 f197e15d02e26dbcfa19db17c893903c1edaa403 SHA256 669036300833954f7d57757273ab2fe2784d724f1147fada1d94ce7d92bc3b81
+MISC ChangeLog 1665 RMD160 d3360a7ed1949376fecdddf61d7bc495c39afdd2 SHA1 f86576eb004a49484e4cde76e525338b47efb074 SHA256 bf11c94099269992e309e338405481579929ecc587b4f1aee0a916e24932bf38
 MISC metadata.xml 615 RMD160 e5e412a7215c6911aefc8143530ee3761868e661 SHA1 9204f5e4ff84d0f75419d424f8b927866e9a98ac SHA256 d845fc100a4760a9a5e89259d2805f111f6858e335ca01938faa87d42da7a91d
