@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Sep 2010; Nikoli <nikoli@lavabit.com> clementine-9999.ebuild:
+  update live ebuild
+
 *clementine-0.5.3 (30 Sep 2010)
 
   30 Sep 2010; Nikoli <nikoli@lavabit.com> -clementine-0.5.1.ebuild,
